--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  width: 90vw;
+  height: 90vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.board {
+  width: calc(82px * 8);
+  height: calc(82px * 8);
+  display: flex;
+  flex-wrap: wrap;
+  border: 1px solid black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cell {
+  width: 82px;
+  height: 82px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cell img {
+  width: 48px;
+  height: 48px;
+  position: relative;
+}
+
+.black {
+  background-color: rgb(107, 73, 47);
+}
+
+.white {
+  background-color: rgb(223, 190, 124);
+}
+
+.selected {
+  background-color: rgb(199, 133, 133);
+}
+
+.available {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  background-color: rgb(196, 228, 196);
+}
+
+.lost {
+  height: calc(25vh - 60px);
+  padding: 50px;
+  margin-left: 50px;
+  background-color: rgb(92, 91, 91);
+  text-align: center;
+  border: 1px solid black;
+}
+ 
+.mainTimer {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
